--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ dependencies = [
 [tool.hatch.build.targets.wheel]
 packages = ["src/ocpi_tariffs"]
 
+[tool.hatch.build]
+include = [
+    "src/ocpi_tariffs/py.typed"
+]
+
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 testpaths = ["tests"]
