--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,30 @@ version = "0.1.0"
 description = "OCPI 2.2.1 Tariff Calculation Engine"
 readme = "README.md"
 requires-python = ">=3.10"
+license = { file = "LICENSE" }
+authors = [
+  { name = "Hamza Nabil", email = "git@hamzanabil.com" },
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Office/Business :: Financial :: Accounting",
+]
+keywords = ["ocpi", "emsp", "cpo", "ev", "charging", "tariffs", "billing"]
 dependencies = [
     "pydantic>=2.0.0",
     "ruff>=0.1.0",
     "mypy>=1.0.0",
     "types-python-dateutil",
 ]
+
+[project.urls]
+Repository = "https://github.com/Hamza-nabil/ocpi-tariffs-py"
+Issues = "https://github.com/Hamza-nabil/ocpi-tariffs-py/issues"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/ocpi_tariffs"]
